# simon-at-simon

./: Cargo.toml  LICENSE-MIT  README.md  index.html  main.js  style.css
pkg/: bundle.js  yew_wasm_pack_minimal.js  yew_wasm_pack_minimal_bg.wasm
src/: app.rs
